package map;

public interface IGPS {
    
}